# tickers-lstm

./: README.md  main.py  pyproject.toml  pyrightconfig.json
notebook/: colab_notebook.ipynb
utils/: graphs.py  lstm.py  setup_test.py
